--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
 load("@io_bazel_rules_go//go:def.bzl", "nogo")
-#load("@npm//:defs.bzl", "npm_link_all_packages")
+load("@npm//:defs.bzl", "npm_link_all_packages")
 
 # gazelle:prefix github.com/kriscfoster/multi-language-bazel-monorepo
 # gazelle:java_maven_install_file maven_install.json
@@ -26,4 +26,4 @@ gazelle(
     command = "update-repos",
 )
 
-# npm_link_all_packages(name = "npm")
+npm_link_all_packages(name = "npm")
