updated and working languages

--- a/projects/node_web/BUILD.bazel
+++ b/projects/node_web/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
+#load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
 
 js_binary(
     name = "node_web",
